src/poc_next/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-next-backend
  namespace: ds-management-ui
  labels:
    app: poc-next-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poc-next-backend
  template:
    metadata:
      labels:
        app: poc-next-backend
    spec:
      serviceAccountName: poc-next-sa
      containers:
      - name: backend
        image: ${BACKEND_IMAGE}:${BACKEND_IMAGE_TAG_VERSION}
        ports:
        - containerPort: 5001
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "50m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 5001
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5001
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-next-frontend
  namespace: ds-management-ui
  labels:
    app: poc-next-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poc-next-frontend
  template:
    metadata:
      labels:
        app: poc-next-frontend
    spec:
      serviceAccountName: poc-next-sa
      containers:
      - name: frontend
        image: ${FRONTEND_IMAGE}:${FRONTEND_IMAGE_TAG_VERSION}
        ports:
        - containerPort: 3001
        resources:
          limits:
            cpu: "300m"
            memory: "512Mi"
          requests:
            cpu: "50m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /data-publication
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /data-publication
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 5
