src/poc_next/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${BACKEND_APP_NAME}
  namespace: ${NAMESPACE}
  labels:
    app: ${BACKEND_APP_NAME}
spec:
  type: ClusterIP
  ports:
  - port: ${BACKEND_SERVICE_PORT}
    targetPort: ${BACKEND_SERVICE_PORT}
    protocol: TCP
    name: http
  selector:
    app: ${BACKEND_APP_NAME}
---
apiVersion: v1
kind: Service
metadata:
  name: ${FRONTEND_APP_NAME}
  namespace: ${NAMESPACE}
  labels:
    app: poc-next-frontend
spec:
  type: ClusterIP
  ports:
  - port: ${FRONTEND_SERVICE_PORT}
    targetPort: ${FRONTEND_SERVICE_PORT}
    protocol: TCP
    name: http
  selector:
    app: ${FRONTEND_APP_NAME}
